--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url('https://images.unsplash.com/photo-1482517967863-00e15c9b44be?ixlib=rb-4.0.3');
+  background-image: url('https://images.alphacoders.com/118/118821.jpg');
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating */
