--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url('https://wallpapercave.com/wp/wp7934527.jpg');
+  background-image: url('https://wallpapercave.com/wp/wp7934527.jpg'); /* Background image link here */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating */
