--- a/style/main.css
+++ b/style/main.css
@@ -22,7 +22,7 @@ p {
     width: 30px; /* Adjust width as needed */
     height: 30px; /* Adjust height as needed */
     border-radius: 50%; /* Makes the image round */
-    vertical-align: middle; /* Aligns the image with the text */
+    vertical-align: left; /* Aligns the image with the text */
     margin-right: 5px; /* Adds some space between the image and the text */
 }
 
