--- a/style/main.css
+++ b/style/main.css
@@ -18,12 +18,12 @@ p {
   /* background-color: rgba(0, 0, 0, 0.1); Background color with opacity */
 }
 
-.round-img {
-    width: 30px; /* Adjust width as needed */
-    height: 30px; /* Adjust height as needed */
-    border-radius: 50%; /* Makes the image round */
-    verticle-align: middle;/* vertical-align: middle;  Aligns the image with the text */
-    margin-right: 5px; /* Adds some space between the image and the text */
+/* .round-img {
+    width: 30px; 
+    height: 30px;
+    border-radius: 50%; 
+    verticle-align: middle;
+    margin-right: 5px; */
 }
 
 .song {
@@ -69,9 +69,18 @@ p {
   width: 600px;
 }
 
+.text-box .round-img {
+  text-align: left;
+  width: 30px; /* Adjust width as needed */
+  height: 30px; /* Adjust height as needed */
+  border-radius: 50%; /* Makes the image round */
+  verticle-align: middle;/* vertical-align: middle;  Aligns the image with the text */
+  margin-right: 5px; /* Adds some space between the image and the text */
+}
+
 .text-box p {
   margin: 0;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .text-box span {
