--- a/style/main.css
+++ b/style/main.css
@@ -160,11 +160,11 @@ p {
 }
 
 .baloons img:nth-child(even) {
-  left: -10%;
+  left: 10%; /* og -10% */
 }
 
 .baloons img:nth-child(odd) {
-  right: -10%;
+  right: 10%; /* og -10% */
 }
 
 .baloons img:nth-child(3n + 0) {
@@ -239,12 +239,6 @@ p {
   fill: #031c02; /* darkk green */
   left: 87vw;
   top: 94vh;
-}
-
-.the-link {
-  font-size: 3em;
-  margin: 0;
-  text-transform: uppercase;
 }
 
 .wish-hbd {
