--- a/style/main.css
+++ b/style/main.css
@@ -52,17 +52,13 @@ p {
   font-size: 3rem;
 }
 
-.four {
-  font-size: 2.3rem;
-}
-
-/* .four .text-box {
+.four .text-box {
   border: 3px solid #aaa;
   border-radius: 5px;
   margin: 0 auto;
   padding: 10px;
   position: relative;
-  width: 600px; */
+  width: 600px;
 }
 
 .round-img {
