--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@ body {
 
 p {
   color: #fff 
-  background-color: rgba(0, 0, 0, 0.1); /* Background color with opacity */
+  /* background-color: rgba(0, 0, 0, 0.1); Background color with opacity */
 }
 
 .song {
