--- a/style/main.css
+++ b/style/main.css
@@ -59,6 +59,7 @@ p {
   padding: 10px;
   position: relative;
   width: 600px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .round-img {
@@ -77,8 +78,7 @@ p {
 }
 
 .text-box p {
-  margin: 0;
-  /* text-align: left; */
+  margin: 0; /* text-align: left; */
 }
 
 .text-box span {
