--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url('https://wallpapercave.com/wp/wp7934527.jpg'); /* Background image link here */
+  background-image: url('https://t3.ftcdn.net/jpg/03/02/32/48/360_F_302324883_Oq6Ymj1lRlBkjGxn3xwtY7E1XjXu3edH.jpg'); /* Background image link here */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating */
