--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background-image: url('https://static.vecteezy.com/system/resources/previews/029/799/569/non_2x/red-cat-in-christmas-hat-isolated-on-a-blurred-background-merry-christmas-and-a-happy-new-year-free-photo.jpg'); /* Background image link here */
+  background-image: url('https://wallpapers.com/images/hd/christmas-cat-pictures-0lep4l4dn0tqhg98.jpg'); /* Background image link here */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating */
