--- a/style-2.css
+++ b/style-2.css
@@ -12,7 +12,7 @@ body {
     
     min-height: 100vh;
     overflow-x: hidden;
-    background: linear-gradient(#360402, #ffdddb);
+    background: linear-gradient(#360402, #fff);
 }
 
 header {
