--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,22 @@ body {
   margin: 0; /* Remove default margin */
 }
 
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+  z-index: 0;
+}
+
+body {
+  position: relative;
+  z-index: 1;
+}
+
 p {
   color: #fff 
   /* background-color: rgba(0, 0, 0, 0.1); Background color with opacity */
