--- a/style/main.css
+++ b/style/main.css
@@ -75,7 +75,7 @@ p {
   padding: 10px;
   position: relative;
   width: 600px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(66,69,73,1);
 }
 
 .round-img {
