--- a/style/main.css
+++ b/style/main.css
@@ -69,7 +69,7 @@ p {
 }
 
 .four .text-box {
-  border: 3px solid #aaa;
+  border: 3px solid #424549;
   border-radius: 5px;
   margin: 0 auto;
   padding: 10px;
