--- a/style/main.css
+++ b/style/main.css
@@ -100,6 +100,8 @@ p {
 .text-box p {
   margin: 0; /* text-align: left; */
   text-align: left;
+  align-self: flex-end;
+  margin-right: 10px;
 }
 
 .text-box span {
