--- a/style/gift.css
+++ b/style/gift.css
@@ -17,3 +17,10 @@ body {
   text-align:center; 
   color:#fff
 }
+
+img {
+  display: inline-block;
+  height: 350px;
+  max-width: 100%;
+  /* height: auto; */
+}
