--- a/style/gift.css
+++ b/style/gift.css
@@ -22,6 +22,6 @@ body {
 img {
   display: block;
   margin: 0 auto; /* centers the image */
-  max-width: 100%; /* makes it responsive */
-  height: auto; /* maintains aspect ratio */
+  max-height: 100%; /* makes it responsive */
+  width: auto; /* maintains aspect ratio */
 }
