--- a/style/gift.css
+++ b/style/gift.css
@@ -19,6 +19,10 @@ body {
   color:#fff
 }
 
+h1 {
+  font-weight: bolder;
+}
+
 img {
   display: block;
   margin: 10px auto; /* adds a small margin around the image */
