--- a/style/gift.css
+++ b/style/gift.css
@@ -30,6 +30,23 @@ body {
   z-index: 1;
 }
 
+.container {
+  height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  visibility: hidden;
+  width: 100vw;
+}
+
+.container > div {
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 20vh;
+}
+
 .text {
   text-align:center; 
   color:#fff
