--- a/style/gift.css
+++ b/style/gift.css
@@ -5,8 +5,8 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  /* background: linear-gradient(to right, #a32424, #194261); */
-  background-image: url('https://wallpapers.com/images/hd/christmas-cat-pictures-0lep4l4dn0tqhg98.jpg'); /* Background image link here */
+  background: linear-gradient(to right, #a32424, #194261);
+  /* background-image: url('https://wallpapers.com/images/hd/christmas-cat-pictures-0lep4l4dn0tqhg98.jpg'); */ /* Background image link here */
   background-size: cover; /* Cover the entire viewport */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Prevent repeating */
@@ -14,26 +14,9 @@ body {
   margin: 0; /* Remove default margin */
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
-  z-index: 0;
-}
-
-body {
-  
-}
-
 .text {
   text-align:center; 
   color:#fff
-  position: relative;
-  z-index: 1;
 }
 
 h1 {
@@ -46,6 +29,4 @@ img {
   margin: 10px auto; /* adds a small margin around the image */
   max-height: 70vh; /* limits the height to 90% of the viewport */
   width: auto; /* maintains aspect ratio based on height */
-  position: relative;
-  z-index: 1;
 }
