--- a/style/gift.css
+++ b/style/gift.css
@@ -24,6 +24,10 @@ h1 {
   font-family: fantasy;
 }
 
+h2 {
+  font-weight:light;
+}
+
 img {
   display: block;
   margin: 10px auto; /* adds a small margin around the image */
