--- a/quiz/Assets/style.css
+++ b/quiz/Assets/style.css
@@ -12,7 +12,7 @@ body {
     display:block;
     max-width: auto;
     background: rgb(182,160,240);
-    background: radial-gradient(circle, rgba(240,160,160,1) 0%, rgba(76, 110, 176,1) 100%, rgba(60,129,176,1) 100%);
+    background: radial-gradient(circle, rgba(240,160,160,1) 0%, rgba(76,110,176,1) 100%, rgba(60,129,176,1) 100%);
     padding:15px;
     margin:0px;
 }
