--- a/quiz/Assets/style.css
+++ b/quiz/Assets/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: larger;
     /* margin: 10px; */
+    background-image: url("quiz_background.png");
     background-color: rgb(228, 228, 228);
 }
 
