--- a/pages/story.css
+++ b/pages/story.css
@@ -1,1 +1,7 @@
+body {
+  background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(160,32,240,1) 100%, rgba(60,129,176,1) 100%);
+}
 
+p {
+  text-align: center
+}
