--- a/pages/story.css
+++ b/pages/story.css
@@ -1,5 +1,5 @@
 body {
-  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(160,32,240,1) 100%, rgba(60,129,176,1) 100%);
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(60,129,176,1) 100%, rgba(160,32,240,1) 100%,);
 }
 
 p {
