--- a/pages/story.css
+++ b/pages/story.css
@@ -1,9 +1,10 @@
 body {
   background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(60,129,176,1) 100%, rgba(160,32,240,1) 100%,);
-  height: 100vh;
-  margin: 0 auto;
-  position: relative;
-  width: 90vw;
+  background-size: cover; /* Cover the entire viewport */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent repeating */
+  height: 100vh; /* Ensure the body takes the full viewport height */
+  margin: 0; /* Remove default margin */
 }
 
 p {
