--- a/pages/story.css
+++ b/pages/story.css
@@ -9,6 +9,11 @@ body {
 
 p {
   text-align: justify;
-  margin: 5%;
-  
+  margin: 5;
+}
+
+h1 {
+  text-align: center;
+  font-family: fantasy;
+  font-weight: bolder;
 }
