--- a/pages/story.css
+++ b/pages/story.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-  color: #ffffff; /* White text for contrast against background */
+  color: #000; /* White text for contrast against background */
   text-shadow: 2px 2px 5px #000; /* Adds a glowing effect */
   font-size: 3rem; /* Increase the size for a more striking title */
   margin-top: 20px;
