--- a/gift/gift.css
+++ b/gift/gift.css
@@ -23,7 +23,7 @@ p {
   	font-family: 'Georgia', serif; 
   font-size: 1rem; 
   line-height: 1.4; 
-  text-align: center; 
+  text-align: left; 
   color: #663399; 
   background: rgba(255, 248, 220, 0.8); 
   padding: 20px; 
