--- a/gift/gift.css
+++ b/gift/gift.css
@@ -24,7 +24,7 @@ p {
   font-size: 1rem; 
   line-height: 1.4; 
   text-align: left; 
-  text-indent: 5;
+  text-indent: 5px;
   color: #663399; 
   background: rgba(255, 248, 220, 0.8); 
   padding: 20px; 
