--- a/gift/gift.css
+++ b/gift/gift.css
@@ -20,7 +20,7 @@ body {
 }
 
 p {
-  font-family: 'Georgia', sans-serif; 
+  font-family: 'Papyrus', fantasy; 
   font-size: 1rem; 
   line-height: 1.4; 
   text-align: left; 
