--- a/gift/gift.css
+++ b/gift/gift.css
@@ -34,6 +34,10 @@ p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+span {
+   text-align: right;
+}
+
 h1 {
   font-weight: 999;
   font-family: fantasy;
