--- a/gift/gift.css
+++ b/gift/gift.css
@@ -15,7 +15,7 @@ body {
 
   overflow: hidden; /* Prevent scrollbars */
   height: 100vh; /* asdlfjaskldfjasdl;kfjasl;df */
-  display: flex; /* fasjkdfhaklsdfjasl */
+  /* display: flex; fasjkdfhaklsdfjasl */
   justify-content: center; /* asdklfhjaskldhfasdlkfh */
   align-items: center; /* asdfjl;kajsdfaasdfasdkl;fj */
 }
