--- a/gift/gift.css
+++ b/gift/gift.css
@@ -24,7 +24,7 @@ p {
   font-size: 1rem; 
   line-height: 1.4; 
   text-align: left; 
-  color: #663399; 
+  color: #363c66; 
   background: rgba(230, 229, 225, 0.8); 
   padding: 20px; 
   margin: 20px auto; 
